[package]
name = "memhack-internal"
version = "0.1.0"
authors = ["Jakobzs"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
num_cpus = "1.13"

[dependencies.windows]
version = "0.28.0"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading"
]